# statectl

./: .gitignore  README.md  Taskfile.yaml  pyproject.toml
.claude/: CLAUDE.md
.claude/agents/: gh-pr-reviewer.md
.zed/: settings.json
docs/: roadmap.md
examples/: dag_diamond.py  ensure_directory_engine.py  run_command_engine.py  run_engine.py  variable_registry_db_provision.py
src/statectl/: __init__.py  _deferred_handle.py  _engine_error.py  _engine_result.py  _execution_node.py  engine_error.py  execution_node.py  state_ctl.py  state_ctl_engine.py
statectl/: __init__.py  engine_error.py  engine_result.py  execution_node.py  state_changer.py  state_ctl_engine.py
statectl/interfaces/: __init__.py  logger.py
statectl/statechangers/: new_text_file.py  run_command.py
tests/: _changer_fixtures.py  test_add_deferred.py  test_archive.py  test_dag_engine.py  test_engine_post_assess.py  test_hashing.py  test_publish_hook.py  test_variable_flow.py  test_variable_registry.py
tests/fakes/: failing_archive.py  failing_clock.py  failing_env.py  failing_file_system.py  failing_hashing.py  failing_http_client.py  failing_process_runner.py  in_memory_file_system.py  scripted_archive.py  scripted_clock.py  scripted_env.py  scripted_hashing.py  scripted_http_client.py  scripted_process_runner.py
tests/statechangers/: _ensure_user_helpers.py  _launchd_helpers.py  _systemd_helpers.py  test_apt_package_assess_capability_errors.py  test_apt_package_assess_invalid.py  test_apt_package_assess_ready_and_applied.py  test_apt_package_end_to_end_through_engine.py  test_apt_package_invariants.py  test_apt_package_rollback.py  test_apt_package_transition_error_matrix.py  test_apt_package_transition_success.py  test_apt_repository_assess_invalid.py  test_apt_repository_assess_ready_and_applied.py  test_apt_repository_end_to_end_through_engine.py  test_apt_repository_invariants.py  test_apt_repository_rollback.py  test_apt_repository_transition_error_matrix.py  test_apt_repository_transition_success.py  test_apt_update_assess_invalid.py  test_apt_update_assess_ready_and_applied.py  test_apt_update_end_to_end_through_engine.py  test_apt_update_invariants.py  test_brew_cask_assess_invalid.py  (+160 more)
(+102 files in other folders)
