[project]
name = "statectl"
version = "0.1.0"
description = "A general framework for state transitions, geared toward OS and infrastructure use cases."
readme = "README.md"
authors = [
    { name = "Per Arneng", email = "per.arneng@scalebit.com" }
]
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [
    "dependency-injector>=4.41",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["statectl"]
