[project]
name = "statectl"
version = "0.1.0"
description = "A general framework for state transitions, geared toward OS and infrastructure use cases."
readme = "README.md"
authors = [
    { name = "Per Arneng", email = "per.arneng@scalebit.com" }
]
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [
    "dependency-injector>=4.41",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/statectl"]

[tool.pyrefly]
preset = "strict"
project-includes = [
    "src/statectl/**/*.py",
    "src/statectl/**/*.ipynb",
]

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
select = ["C90"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[dependency-groups]
dev = [
    "pyrefly>=1.0.0",
    "pytest>=9.0.3",
    "pydeps>=3.0",
    "pylint>=3.0",
    "ruff>=0.7",
]
